chore(kotlin): [CHK-4297] version upgrade to 2.2.0 (#229)
* chore(kotlin): [CHK-4297] upgrade from 1.9.X to 2.2.0

* chore(kotlin): [CHK-4297] run the new spotless

* chore(kotlin): [CHK-4297] update lockfile and metadata

* chore(deps): [CHK-4297] add pipeline trusted artifact groups

* chore(build): [CHK-4297] update deprecated commands/properties

* chore(docs): [CHK-4297] update testing instructions

* feat: [CHK-4207] update to java 21 (#230)

* feat: [CHK-4297] upgrade java version to 21

* feat: [CHK-4297] upgrade java version to 21 dockerfile

* feat: [CHK-4297] upgrade java version to 21 code review pipelines

* chore: update java version file

---------

Co-authored-by: FrancescoDiTonnoJakala <francesco.ditonno.ext@jakala.com>
Co-authored-by: Pietro Tota <pietro.tota@pagopa.it>
Co-authored-by: Pietro Tota <115724836+pietro-tota@users.noreply.github.com>